# lgr-lbc-custom-ledger

./: Cargo.toml  README.md  recipient_keypair.txt  sender_keypair.txt
src/: lib.rs  main.rs  miner.rs
src/blockchain/: block.rs  blockchain.rs  merkle_tree.rs  mod.rs  transaction.rs
src/mining/: mod.rs  proof_of_work.rs  worker_node copy.rs  worker_node.rs
src/network/: client.rs  message.rs  mod.rs  node.rs  server.rs
src/utils/: hashing.rs  mod.rs
