[package]
name = "rusty-coin"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
bitcoin_hashes = "0.14.0"
env_logger = "0.11.5"
hex = "0.4.3"
log = "0.4.22"
num-bigint = "0.4.6"
rand = "0.8.5"
secp256k1 = { version = "0.29.1", features = ["rand"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
sha2 = "0.10.8"
tokio = { version = "1.40.0", features = ["full"] }

[[bin]]
name = "miner"
path = "src/bin/demo_miner.rs"

[[bin]]
name = "node"
path = "src/bin/node.rs"

[[bin]]
name = "rusty_coin_node"
path = "src/main.rs"

[[bin]]
name = "rusty_coin_miner"
path = "src/bin/miner.rs"
